--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "dependencies": {
     "classnames": "2.2.3",
     "normalize.css": "4.0.0",
-    "pubsub-js": "1.5.3",
     "react": "15.0.0-rc.2",
     "react-container-query": "0.4.0",
-    "react-dom": "15.0.0-rc.2"
+    "react-dom": "15.0.0-rc.2",
+    "react-native-listener": "1.0.1",
+    "react-redux": "4.4.1",
+    "redux": "3.3.1",
+    "redux-actions": "0.9.1",
+    "redux-logger": "2.6.1"
   },
   "devDependencies": {
     "babel-core": "6.7.4",
