--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react": "15.0.0-rc.2",
     "react-container-query": "0.4.0",
     "react-dom": "15.0.0-rc.2",
-    "react-motion-ui-pack": "0.6.1",
-    "react-native-listener": "1.0.1",
+    "react-keydown": "1.4.9",
     "react-redux": "4.4.1",
     "redux": "3.3.1",
     "redux-actions": "0.9.1",
