--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "classnames": "2.2.3",
     "lodash": "4.8.2",
     "normalize.css": "4.0.0",
-    "react": "15.0.0-rc.2",
+    "react": "15.0.0",
     "react-container-query": "0.4.0",
-    "react-dom": "15.0.0-rc.2",
+    "react-dom": "15.0.0",
     "react-keydown": "1.4.9",
     "react-redux": "4.4.1",
     "redux": "3.3.1",
